Add Spring Security to gateway
