# project/cowork-gateway/server/src/main/java/hu/cowork/gateway/authenticate/repository/UserRepository.java
@@ -1,0 +1,12 @@
+package hu.cowork.gateway.authenticate.repository;
+
+import hu.cowork.gateway.authenticate.entity.User;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.Optional;
+
+@Repository
+public interface UserRepository extends JpaRepository<User, Long> {
+    Optional<User> findByUsername(String username);
+}
